2011-05-06  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in: Update dependencies.
	(LISP_H): Add inttypes.h and stdin.h.
	(PROCESS_H): Add unistd.h.

2011-05-06  Eli Zaretskii  <eliz@gnu.org>

	* lread.c: Include limits.h (fixes the MS-Windows build broken by
	2011-05-06T07:13:19Z!eggert@cs.ucla.edu).

2011-05-06  Paul Eggert  <eggert@cs.ucla.edu>

	* image.c (Finit_image_library) [!HAVE_NTGUI]: Omit unused local.

	* term.c (vfatal): Remove stray call to va_end.
	It's not needed and the C Standard doesn't allow it here anyway.

	Use C99's va_copy to avoid undefined behavior on x86-64 GNU/Linux.
	* eval.c (verror): doprnt a copy of ap, not the original.  (Bug#8545)

	* eval.c (verror): OK to create a string of up to MOST_POSITIVE_FIXNUM
	bytes.

	* term.c: Don't include <stdarg.h>, as <lisp.h> does that.

	* callproc.c (Fcall_process): Use 'volatile' to avoid vfork clobbering.

	* process.c (Fformat_network_address): Fix typo: args2 -> *args2.

	* xmenu.c (set_frame_menubar): Fix typo: int * -> int (3 times).

	* coding.c (detect_coding_charset): Fix typo: * 2 -> *4 (Bug#8601).

	* charset.h (struct charset.code_space): Now has 15 elements, not 16.
	* charset.c (Fdefine_charset_internal): Don't initialize
	charset.code_space[15].  The value was garbage, on hosts with
	32-bit int (Bug#8600).

	* lread.c (read_integer): Be more consistent with string-to-number.
	Use string_to_number to do the actual conversion; this avoids
	rounding errors and fixes some other screwups.  Without this fix,
	for example, #x1fffffffffffffff was misread as -2305843009213693952.
	(digit_to_number): Move earlier, for benefit of read_integer.
	Return -1 if the digit is out of range for the base, -2 if it is
	not a digit in any supported base.  (Bug#8602)

	* doprnt.c (doprnt): Support arbitrary pI values, such as "I64".

	* dispnew.c (scrolling_window): Return 1 if we scrolled,
	to match comment at start of function.  This also removes a